{{$NEXT}}
	* YahooWeb.pm - Fixed incorrect pricing for single character symbols
	  and changed URL to get trade date - Issues #314 #319
	* Another fix to the URL in YahooJSON and CurrencyRates/YahooJSON - Issue #318

1.57      2023-07-01 12:37:07-07:00 America/Los_Angeles
	* Correct set exchange in YahooJSON.pm - Issue #306
	* Added close, change and p_change to Tradegate, XETRA and Sinvestor
	  Added optional parameter INST_ID to specify the institute id.
	  Fixed bug in Tradegate, XETRA and Sinvestor for numbers equal or higher than 1.000 - PR #304
	* Added GoogleWeb Module
	* YahooWeb module added - PR #296
	* Added MarketWatch Module
	* Replaced cached file with IO::String object in IndiaMutual.pm
	* Fixed missing date in AEX.pm - Issue #298
	* Fixed Examples in POD Documentation in a few modules - PR #295
	* move use strict to be the first statement in TreasuryDirect.pm and TwelveData.pm #290
	* remove old perl version requirement statements from TreasuryDirect.pm and TwelveData.pm #290
	* removed Data::Dumper that caused another test to fail from TreasuryDirect.pm #290
        * Fixed Fool.pm and fool.t - PR #289

1.56      2023-05-29 14:56:23-07:00 America/Los_Angeles
	* Replaced Tradeville.pm with BVB.pm - Issue #269
	* Added new TwelveData module
	* Updated YahooJSON.pm and CurrencyRates/YahooJSON.pm to use https://query2.finance.yahoo.com/v11 - PR #284
	* Bourso.pm - Squash anything but numbers and period in quote values.
	* Renamed MStarUK.pm to MorningstarUK.pm
	* Added get_features method - PR #260

1.55      2023-05-13 12:22:00-07:00 America/Los_Angeles
	* Added YahooJSON currency rate module PR #270
	* Added TRV => CAD in AlphaVantage.pm. Issue #265 - PR #267
	* Quick fix for YahooJSON.pm API
	* URL Change for MorningstarJP. Issue #261
	* Regex fix in FTfunds.pm and changed test cases ftfunds.t. PR #262

1.54      2022-12-26 15:25:02-08:00 America/Los_Angeles
	* Fix to AEX.pm - Issue #235 - PR #244