@@ -1,4 +1,5 @@
 {{$NEXT}}
+	* AlphaVantage.pm - Fetch Currency for non-US stocks - Issue #281
 	* YahooWeb.pm - Fixed incorrect pricing for single character symbols
 	  and changed URL to get trade date - Issues #314 #319
 	* Another fix to the URL in YahooJSON and CurrencyRates/YahooJSON - Issue #318
